--- a/index.html
+++ b/index.html
@@ -76,19 +76,19 @@
             <ul>
                 <li>
 
-                    <img src="./imiges/img1.jpg" alt="computer" width="360" />
+                    <img src="./images/img1.jpg" alt="computer" width="360" />
                 </li>
             </ul>
 
             <ul>
                 <li>
-                    <img src="./imiges/img1.jpg" alt="phone" width="360" />
+                    <img src="./images/img1.jpg" alt="phone" width="360" />
                 </li>
             </ul>
 
             <ul>
                 <li>
-                    <img src="./imiges/img1.jpg" alt="phone" width="360" />
+                    <img src="./images/img1.jpg" alt="phone" width="360" />
                 </li>
             </ul>
         </section>
@@ -97,26 +97,26 @@
             <h2>Our Team</h2>
             <ul>
                 <li>
-                    <img src="./imiges/mark.jpg" alt="MarkGuerrero" width="264" />
+                    <img src="./images/mark.jpg" alt="MarkGuerrero" width="264" />
                     <h3>Mark Guerrero</h3>
                     <p>Product Designer</p>
                 </li>
 
                 <li>
-                    <img src="./imiges/tom.jpg" alt="TomFordo" width="264" />
+                    <img src="./images/tom.jpg" alt="TomFordo" width="264" />
 
                     <h3>Tom Fordo</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./imiges/camila.jpg" alt="CamilaGarcia" width="264" />
+                    <img src="./images/camila.jpg" alt="CamilaGarcia" width="264" />
 
                     <h3>Camila Garcia</h3>
                     <p>Marketing</p>
                 </li>
 
                 <li>
-                    <img src="./imiges/daniel.jpg" alt="DanielWilson" width="264" />
+                    <img src="./images/daniel.jpg" alt="DanielWilson" width="264" />
 
 
                     <h3>Daniel Wilson</h3>
